--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -20,24 +20,29 @@
 - name: Download specific Jenkins version.
   get_url:
     url: "{{ jenkins_pkg_url }}/jenkins_{{ jenkins_version }}_all.deb"
-    dest: "/tmp/jenkins_{{ jenkins_version }}_all.deb"
+    dest: "/tmp/jenkins.deb"
   when: jenkins_version is defined
 
 - name: Check if we downloaded a specific version of Jenkins.
   stat:
-    path: "/tmp/jenkins_{{ jenkins_version }}_all.deb"
+    path: "/tmp/jenkins.deb"
   register: specific_version
-  when: jenkins_version is defined
 
 - name: Install our specific version of Jenkins.
   apt:
-    deb: "/tmp/jenkins_{{ jenkins_version }}_all.deb"
+    deb: "/tmp/jenkins.deb"
     state: installed
-  when: jenkins_version is defined and specific_version.stat.exists
+  when: specific_version.stat.exists
   notify: configure default users
 
-- name: Ensure Jenkins is installed.
+- name: Validate Jenkins is installed and register package name.
   apt:
     name: jenkins
-    state: "{{ jenkins_package_state }}"
+    state: present
   notify: configure default users
+
+- name: Install Jenkins from repository.
+  apt:
+    name: jenkins
+    state: installed
+  when: jenkins_version is undefined
