--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -20,24 +20,30 @@
 - name: Download specific Jenkins version.
   get_url:
     url: "{{ jenkins_pkg_url }}/jenkins-{{ jenkins_version }}-1.1.noarch.rpm"
-    dest: "/tmp/jenkins-{{ jenkins_version }}-1.1.noarch.rpm"
+    dest: "/tmp/jenkins.rpm"
   when: jenkins_version is defined
 
 - name: Check if we downloaded a specific version of Jenkins.
   stat:
-    path: "/tmp/jenkins-{{ jenkins_version }}-1.1.noarch.rpm"
+    path: "/tmp/jenkins.rpm"
   register: specific_version
-  when: jenkins_version is defined
 
 - name: Install our specific version of Jenkins.
   package:
-    name: "/tmp/jenkins-{{ jenkins_version }}-1.1.noarch.rpm"
+    name: "/tmp/jenkins.rpm"
     state: installed
-  when: jenkins_version is defined and specific_version.stat.exists
+  when: specific_version.stat.exists
   notify: configure default users
 
-- name: Ensure Jenkins is installed.
+- name: Validate Jenkins is installed and register package name.
   package:
     name: jenkins
-    state: "{{ jenkins_package_state }}"
+    state: present
+  when: not specific_version.stat.exists
   notify: configure default users
+
+- name: Install Jenkins from repository.
+  package:
+    name: jenkins
+    state: installed
+  when: jenkins_version is undefined
